I'm tring to follow Semantic Versioning 2.0.0
http://semver.org/

=V0.0.0=
2015-02-21
* building app with crosswalk https://crosswalk-project.org

2015-02-20
* UI: broadcasting icon, admin icon, connected icon, disconnected icon
* UI: copy to clipboard, Connect tab simplified
* DEL buttons
* Assign admin 1 + Assign admin 2
* Can now split for existing tournament and broadcast a new tournament

2015-02-19
* further improvements to UI

2015-02-18
* finally got UI functional along with retested broadcasting
** had problem of javascript variable references not going through broadcast in json
** which is perfectly normal
** so I added some ID fields and split out the addXXX functions for the object functions
** and created separate objects for the player, team, game objects

2015-02-17
* integrating bootstrap css for design
* working on UI, menus, back buttons, etc

2015-02-16
* added score editing at level of players
* added team total games won, lost, tied
* added more game stats than score
* moved YoloBearPeer as controller within Controller1
** instead of opposite

2015-02-14
* peers can connect to each other
* first 2 peers made admins
* peer suggests connection to admins
* peer can request admin full list
* admin can broadcast full list for every new connection
* peer can modify tournament: player/team/game/scores
* admin can broadcast tournament