@@ -1,2 +1,42 @@
 # yolo-bear
-App to organize and broadcast results of a simple tournament
+* This is an app to organize and broadcast results of a simple tournament to other people's devices
+
+# Installation
+* Published on Google Play store
+* Available on the web <a href="http://genesis.akikieng.com/yolo-bear/">here</a>
+
+# Following an existing tournament 
+To connect to a tournament already being broadcasted
+* click on "Follow" on the main menu
+* Enter the ID of anyone already connected to the tournament
+** If nobody is already connected, then enter the ID of the tournament organizer
+** The tournament organizer can access his/her ID by going to "Connect" in the 2nd-level menu
+* The dot on the top right indicates the state of the broadcast
+** If it is green, then you're just waiting for the next results and are still connected
+** If it is yellow, then you've just received a tournament update
+** If it is red, then you're disconnected from the broadcaster
+** If there is no dot, then you're not connected to any tournament yet
+
+# Broadcasting a new tournament 
+* To start entering teams, players, and stats about your tournament, click on "Broadcast" on the main menu
+* Add new teams in the "Teams" section, new players in the "Players" section
+* New games can be added by going to "Games" and then "Waiting"
+* Games are organized by status: Waiting, Playing, Done
+** The team "Win" field in the "Teams" section is the number of games in which the team has a higher score and the game has state "Done"
+** The team "Lost" field and "Tied" fields follow the same logic
+* The microphone on the top right shows the state of your broadcast
+** A microphone indicates that you're the broadcaster, and no information is being sent to your audience
+** A microphone with red lines indicates that you're sending your most recent update to your audience
+
+# Advanced broadcasting management
+* The person broadcasting the tournament is assigned "Admin 1" role
+* The very next person to follow the tournament is assigned the "Admin 2" role
+* In case "Admin 1" loses connection, "Admin 2" takes over the broadcasting of the tournament
+** "Admin 2" will see the dot in the top right disappear and a microphone appear instead
+* "Admin 1" has the power to change results and broadcast them to the audience
+* "Admin 1" also can assign the "Admin 2" role to any person in the "Connect" section (on the 2nd-level menu)
+** Use the "> A2" button next to the desired connection for this
+* "Admin 1" can also give up the "Admin 1" role to another person in the same way the "Admin 2" role is assigned
+
+# Misc
+* Licensed under WTFPL 
