@@ -1,3 +1,3 @@
 td { white-space: nowrap; }
 #onoff { position:fixed; top:0; right:120px; }
-
+.isOpenfalse { text-decoration: line-through; }
