@@ -3,3 +3,4 @@ PEERJS_HOST='localhost';
 PEERJS_PORT=9000;
 PEERJS_PATH='/';
 PEERJS_DEBUG=false;
+PEERJS_MAX_RECONN_ATTEMPT=3;
