@@ -2,6 +2,12 @@ I'm tring to follow Semantic Versioning 2.0.0
 http://semver.org/
 
 =V0.0.0=
+2015-02-23
+* added some more bootstrap classes to the admin controls
+* can now reconnect to signaling server
+* can now connect/disconnect/delete peers
+* ready to release
+
 2015-02-21
 * building app with crosswalk https://crosswalk-project.org
 
